projet_gl/src/test/deca/context/valid/3_33/3_33_4_Modulo.deca
// Description:
//    Programme minimaliste faisant un calcul de modulo
//
// Resultats:
//    
//
// Historique:
//    cree le 22/12/2023

{
        int a = 3;
        int b = 4;
        a % b;
}
